# funk-lines

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  tox.ini
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  constraints.txt  pre-release.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/funk_lines/: __init__.py  __main__.py  cli.py
src/funk_lines/core/: main.py  results.py
src/funk_lines/core/analysers/: file_analyser.py
src/funk_lines/core/ast_processors/: __init__.py  base.py  function_processor.py
tests/: __init__.py  conftest.py  test_analysers.py  test_cli.py  test_integration.py  test_main.py  test_results.py
