[tool.poetry]
name = "funk-lines"
version = "0.1.0"
description = "Funk Lines"
authors = ["Federico Oberndorfer <federico.ober@hotmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/federicober/funk-lines"
repository = "https://github.com/federicober/funk-lines"
documentation = "https://funk-lines.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/federicober/funk-lines/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.2"}
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.10.0"
xdoctest = "^0.15.0"
sphinx = "^3.2.0"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.9.0"
flake8 = "^3.8.3"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
isort = "^5.7.0"
pre-commit-hooks = "^3.2.0"
pylint = "^2.7.2"

[tool.poetry.scripts]
funk-lines = "funk_lines.__main__:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["funk_lines"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.black]
line-length = 100

exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[tool.isort]
profile = "google"
known_first_party = "funk_lines"
line_length = 100
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
